--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Ankit Bansal | Scientist" />
-  <meta property="og:description" content="MS Scholar" />
-  <meta property="og:url" content="https://sci-Ankit.github.io/" />
-  <meta property="og:site_name" content="" />
+  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:description" content="Software Developer" />
+  <meta property="og:url" content="https://varadbhogayata.github.io/" />
+  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
   <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@Ank" />
-  <meta name="twitter:title" content="Scientist | Engineer | Thinker" />
-  <meta name="twitter:description" content="Scientist" />
-  <meta name="twitter:url" content="" />
-  <meta name="author" content="Ankit Bansal" />
-  <meta name="description" content="Scientist who likes to Engineer things." />
+  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
+  <meta name="twitter:description" content="Software Developer" />
+  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+  <meta name="author" content="Varad Bhogayata" />
+  <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Ankit's resume in a new tab" href="https://sci-Ankit.github.io/assets/resume/Ankit_CV.pdf" target="_blank"
+        <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -158,7 +158,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Ankit Bansal</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
+        Bhogayata</a><span class="black-text">Software Developer</span>
     </div>
   </nav>
 
@@ -214,12 +215,12 @@
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/engg-ankitbansal" target="_blank">
+              <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/sci-Ankit target="_blank">
+              <a href="https://github.com/varadbhogayata/" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
@@ -259,20 +260,19 @@
           </h2>
         </blockquote> -->        
         <p>
-          
-          Scientist and Engineer
+          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
 
+          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
 
+          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, Bash, Matlab, Julia</li>
-            <li><b>Libraries:</b> NumPy, Pandas, Scipy, Scikit-learn</li>
-            <li><b>Comptational Methodology:</b> FEA, CFD, MBD, DFT</li>
-            <li><b>Quantum Computation tools:</b> VASP, Quantum Espresso, Gaussian, Aiida</li>
-
-            <li><b>Other Computational Tools:</b> Ansys Mechanical, Ansys Fluent, Hyperwork Optistruct</li>
-
+            <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
+            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
+            <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
+            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
+            <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
           </ul>
           
         </p>
@@ -282,9 +282,7 @@
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
-          Use of Mathematical Models to explore the world around us and Engineer solution to improve peoples life.
-
-
+          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
         </p>
         <!-- <p>
           Another Paragraph
